--- a/source/console/package.json
+++ b/source/console/package.json
@@ -17,6 +17,7 @@
     "@aws-amplify/storage": "^5.9.2",
     "@aws-amplify/ui-react": "^5.1.1",
     "@aws-sdk/client-iot": "^3.391.0",
+    "@aws-sdk/client-s3": "^3.428.0",
     "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^14.4.3",
